@@ -1,3 +1,9 @@
+*rimworld-0_alpha5_p492 (05 Jul 2014)
+
+  05 Jul 2014; Poncho <poncho@spahan.ch> +rimworld-0_alpha5_p492.ebuild,
+  -rimworld-0_alpha4_p466.ebuild:
+  games-simulation/rimworld: version bump
+
 *rimworld-0_alpha4_p466 (08 Jun 2014)
 
   08 Jun 2014; Poncho <poncho@spahan.ch> +rimworld-0_alpha4_p466.ebuild,
